syntax = "proto3";
package proto.playerinfo;
// 基本属性
message BasePlayAttribute
{
     int32 role_id  = 1;
     int32 gender   = 2;
     int32 level    = 3;
     int32 strength = 4; //力量
     int32 agile    = 5; //敏捷
     int32 intelligence = 6;// 智力
     int32 vit      = 7;//体质
     int32 max_hp   = 8;//最大生命值
     int32 atack    = 9;//攻击力
     int32 def      = 10;//防御力
     int32 mag_def1 = 11;// 神圣属性防御
     int32 mag_def2 = 12;//暗影属性防御
     int32 crit_chance  = 13;//暴击几率
     int32 slay_p   = 14;// 必杀伤害加成几率
     int32 dodge_chance = 15;//闪避几率
     int32 block_chance = 16;//格挡几率
     int32 def_pentrate_p   = 17;//防御穿透几率
     int32 hit_chance   = 18;// 命中几率
     int32 block_pentrate_chance    = 19;//破击几率
     int32 mag_def3     = 20;// 元素属性防御
     int32 mag_def4     = 21;// 奥术属性防御
}

// 初始化的角色属性
message InitPlayInfo
{
     BasePlayAttribute attribute    = 1;
     int32 max_level        = 2;

     int32 init_map_id      = 3;
     int32 init_map_x       = 4;
     int32 init_map_y       = 5;
     int32 init_map_z       = 6;

     int32 init_skill_1       = 7;
     int32 init_skill_2      = 8;
     int32 init_skill_3      = 9;
}


// 基本的用户信息
message BasePlayerInfo
{
     int64 player_id = 1;
	 int64 userid	=	2;													    // 平台id
	 int32 sid = 3;																// 分服id
	 int32 index = 4;															// 分服下角色index
	 string name	=	5;	
     int32 status = 6;

     int32 profession   = 7;
     int32 level    = 8;
     int32 max_level    = 9;

     int32 fashion_tid  = 10;
     int32 weapon_tid   = 11;

     int32 init_map_id  = 12;
     int32 init_map_x   = 13;
     int32 init_map_y   = 14;
     int32 init_map_z   = 15;

     int32 init_skill_1   = 16;
     int32 init_skill_2  = 17;
     int32 init_skill_3  = 18;
     int32 equip_tid_1  = 19;//装备10个位置
     int32 equip_tid_2  = 20;
     int32 equip_tid_3  = 21;
     int32 equip_tid_4  = 22;
     int32 equip_tid_5  = 23;
     int32 equip_tid_6  = 24;
     int32 equip_tid_7  = 25;
     int32 equip_tid_8  = 26;
     int32 equip_tid_9  = 27;
     int32 equip_tid_10  = 28;

}

message PlayerInfo
{
     BasePlayerInfo baseinfo            = 1;
     BasePlayAttribute baseAttribute    = 2;
}

message PlayerLoginRequest
{
     int64 player_id = 1;
}

message PlayerLoginResponse
{
     PlayerInfo player = 1;
}


message CreatePlayerRequest
{
     string name = 1;
     int32 gender = 2;//1男 2女，0未设置
     int32 profession = 3;
     int32 index = 4;
}

message CreatePlayerResponse
{
     PlayerInfo player = 1;
}